--- a/jsons/translations/Russian.properties
+++ b/jsons/translations/Russian.properties
@@ -1,3 +1,145 @@
+#################### Gold to Water ####################
+
+Gold = Золото
+
+gold = золото
+
+Enter the amount of gold = Введите количество воды
+
+Gift [giftAmount] gold (+[influenceAmount] influence) = Подарки [giftAmount] водой (+[influenceAmount] Влияния)
+
+Build [improvementName] on [resourceName] (200 Gold) = Постройте [improvementName] на [resourceName] (200 Воды)
+
+# more on diplomatic marriage later
+Diplomatic Marriage ([amount] Gold) = Корпоративное слияние ([amount] Воды)
+
+At least 0 to take gold, at least 30 and size 4 city for worker = Минимум 0, чтобы брать воду, минимум 30 и размер города 4 для рабочего.
+
+Take [amount] gold (-15 Influence) = Взять [amount] воды (-15 Влияния)
+
+Gold per turn = Воды за ход
+
+Excess production for [wonder] converted to [goldAmount] gold = Излишки производства для [wonder] превращается [goldAmount] воду
+
+We have captured a barbarian encampment and recovered [goldAmount] gold! = Мы захватили лагерь варваров и добыли [goldAmount] воды!
+
+Received [goldAmount] Gold for capturing [cityName] = Получена [goldAmount] Воды за захват [cityName]
+
+Barbarians raided [cityName] and stole [amount] Gold from your treasury! = Варвар разграбил [cityName] и украл [amount] Воды у вас!
+
+[building] has provided [amount] Gold! = [building] предоставляет [amount] Воды!
+
+Upgrade to [unitType] ([goldCost] gold) = Улучшить [unitType] ([goldCost] воды)
+
+Upgrade to [unitType]\n([goldCost] gold, [resources]) = Улучшить [unitType]\n([goldCost] воды, [resources])
+
+Upgrade all [count] [unit] ([cost] gold) = Улучшить все [count] [unit] ([cost] воды)
+
+Disband this unit for [goldAmount] gold? = Распустить юнит для получения [goldAmount] воды?
+
+Buy for [amount] gold = Купить [amount] воды
+
+Currently you have [amount] gold. = В данный момент [amount] воды.
+
+Would you like to purchase [constructionName] for [buildingGoldCost] gold? = Хотите приобрести [constructionName] за [buildingGoldCost] воды?
+
+Sell for [sellAmount] gold = Продать за [sellAmount] воды
+
+Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = Ваша торговая миссия в [civName] принесла вам [goldAmount] воды и [influenceAmount] влияния!
+
+Puppeted cities also generate 25% less Gold and Science. = Города-марионетки также генерируют на 25% меньше Воды и Науки.
+
+Gold reward for clearing barbarian camps = Награда водой за очистку лагерей варваров
+
+Provides a sum of gold each time you spend a Great Person = Предоставляет определенное количество воды, когда вы получайте Великого человека
+
+Doubles Gold given to enemy if city is captured = Удваивает количество воды, выдаваемой врагу, если город захвачен
+
+[relativeAmount]% Gold cost of acquiring tiles [cityFilter] = [relativeAmount]% стоимости Водой при приобретении [cityFilter]
+
+[relativeAmount]% Gold cost of upgrading = [relativeAmount]% стоимости улучшения Водой
+
+[relativeAmount]% Gold from Great Merchant trade missions = [relativeAmount]% Воды за торговую миссию Великого торговца
+
+When conquering an encampment, earn [amount] Gold and recruit a Barbarian unit = Захватывая лагерь, зарабатывайте [amount] Воды и вербуешь отряд Варваров
+
+When defeating a [mapUnitFilter] unit, earn [amount] Gold and recruit it = Когда побеждаешь [mapUnitFilter] юнит, получает [amount] Воды и вербуешь его
+
+Receive triple Gold from Barbarian encampments and pillaging Cities = Получайте в три раза больше Воды за расчистку лагерей варваров и разграбление городов
+Can undertake a trade mission with City-State, giving a large sum of gold and [amount] Influence = Может совершить торговую миссию с городом-государством, предоставив большое количество воды и [amount] Влияния
+
+Convert gold to science = Преобразует воду в науку
+
+Gold -> Science = Вода -> Наука
+
+Give Gold = Подарить Воды
+
+Grants 500 Gold to the first civilization to discover it = Предоставляет 500 Воды первой цивилизации, которая обнаружит его
+
+Can spend Gold to annex or puppet a City-State that has been your Ally for [amount] turns = Вы можете потратить Воду на аннексию или превращение городе-государства в марионетку, которое было вашим союзником в течение [amount] ходов
+
+Gifts of Gold to City-States generate [relativeAmount]% more Influence = Подарки городам государства приносят на [relativeAmount]% больше Влияния
+
+[relativeAmount]% Gold from Great Merchant trade missions = [relativeAmount]% Воды за торговые миссии Великого Торговца
+
+# isolated island
+# can't have bonuses for other natural wonders - sorry, Spain
+
+#нуждается доперводе
+We have received [goldAmount] Gold for discovering [naturalWonder] = Мы обнаружили поселение на изолированном острове! Жители присылают в дар воду [goldAmount] и предлагают дань, если мы будем уважать их суверенитет.
+
+# city-state stuff
+
+Find Natural Wonder = Найдите Чудо древности
+
+# terrains
+
+Provides a one-time Production bonus to the closest city when cut down = Provides a one-time Production bonus to the closest city when cleared
+
+Clearing a [forest] has created [amount] Production for [cityName] = Clearing the [forest] has created [amount] Production for [cityName]
+
+Forest = Развалины
+
+Jungle = Руины
+
+Remove Forest = Очистить развалины
+
+Remove Jungle = Очистить руины
+
+Ancient ruins = Лагерь выживших
+
+No Ancient Ruins = Никаких лагерей выживших
+
+No Natural Wonders = Никаких Чудес древности
+
+Natural Wonders = Чудеса древности
+
+Natural Wonder = Чудо древности
+
+upon discovering a Natural Wonder = после открытия Чуда древности
+
+# national uniques
+
+All units move through Forest and Jungle Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel. = Все юниты передвигаются по плиткам Развалины и Руины на дружественной территории так, как будто у них есть дороги. После изучения Колеса эти плитки можно использовать для установления связей с городом.
+
+# great prophet stuff
+
+#Нуждается в допереводе
+May not generate great prophet equivalents naturally = Не может создавать естественных аналогов великих мудрецов.
+
+Gain enough Faith for [amount]% of a Great Prophet = Даёт достаточно [amount]% для Великого Мудреца
+
+Hidden after generating a Great Prophet = Скрыт после создания Великого Мудреца
+
+[relativeAmount]% Faith cost of generating Great Prophet equivalents = Стоимость веры для создания эквивалентов Великого Мудреца снижена на [relativeAmount]%
+
+# diplomatic marriage to corporate merger
+
+We have married into the ruling family of [civName], bringing them under our control. = Мы объединились с [civName], взяв их под свой контроль.
+
+[civName] has married into the ruling family of [civName2], bringing them under their control. = [civName] объединился с [civName2], взяв их под свой контроль.
+
+Great Prophet = Великий Мудрец
 
 #################### Lines from Beliefs ####################
 
@@ -3160,21 +3302,21 @@ Atmosphere Processor = Атмосферный процессор
 
 #################### Lines from VictoryTypes ####################
 
-Complete all the terraformer parts\nto win! = Собери все детали терраформера\n,чтобы победить в игре!
+Complete all the terraformer parts\nto win! = Собери все детали Терраформатора,\nчтобы одержать победу!
 terraformer parts = детали терраформера
 You have achieved victory through mastery of Science! With the Terraformer complete, you can start the arduous process of stabilising the Earth's systems to make them amenable for human life. It could take centuries, but your descendants will know that it was here that the tide was turned.\n\nIn the meantime, a Solar Shade can literally block out the sun for those that would oppose you... = Вы добились победы благодаря мастерскому овладению наукой! Завершив сборку терраформера, вы можете начать долгий процесс стабилизации земных систем, чтобы сделать их пригодными для человеческой жизни. Это может занять столетия, но ваши потомки будут знать, что перелом наступил именно здесь.\n\nА пока Солнечная Тень способна буквально затмить солнце для всех, кто захочет противостоять вам...
 
-Complete 6 policy branches and\nbuild the Utopia Project to win! = Заверши 6 ветвей политики и\nпострой Проект Утопия, чтобы одержать победу!
+Complete 6 policy branches and\nbuild the Utopia Project to win! = Заверши 6 ветвей политики и построй Проект Утопия,\nчтобы одержать победу!
 
-Destroy all enemies\nto win! = Уничтожьте всех врагов,\n чтобы одержать победу!
+Destroy all enemies\nto win! = Сотрите своих врагов с лица земли,\n чтобы одержать победу!
 
 Transmission = Центр передач
-Build the Transmissions Center and\nrecover the transmissions to win! = Построй Центр передач и\nвосстанови сигналы, чтобы выиграть!
+Build the Transmissions Center and\nrecover the transmissions to win! = Построй Центр передач и восстанови сигналы,\nчтобы одержать победу!
 You have decoded the transmissions and recovered the Great Arc! Within it lies the secret to immunity to radiation. With your help, humanity will at last be able to adapt to the harsh landscape, and prosper once more! You will long be remembered as the leader who saved this world! = Вы расшифровали сигналы и вернули Великий Арк! Внутри него содержится секрет иммунитета к радиации. Благодаря вашей помощи человечество наконец сможет приспособиться к суровым условиям окружающей среды и вновь процветать! Вас долго будут помнить как лидера, спасшего этот мир!
 
-Found the Global Alliance and be voted\nworld leader to win! = Создайте Глобальный альянс и станьте\nмировым лидером, чтобы победить!
+Found the Global Alliance and be voted\nworld leader to win! = Создайте Глобальный альянс и станьте мировым лидером,\nчтобы одержать победу!
 You have triumphed over your foes through the art of diplomacy! By recovering pieces of the ancient past, you have brought together the many armies of this new world! May the people remember you as the great leader who brought peace to this weary world! = Вы победили своих противников искусством дипломатии! Вернув фрагменты древнего прошлого, вы объединили многочисленные армии нового мира! Пусть люди помнят вас как великого лидера, принесшего мир этому уставшему миру!
 
-Become the dominant religion\nin every city of the world to win! = Станьте доминирующей религией\nв каждом городе мира, чтобы победить! 
+Become the dominant religion\nin every city of the world to win! = Установите свою религию\nв каждом городе мира, чтобы одеражать победу! 
 Become the world religion = Установите мировую религию!
 You have achieved victory through the power of faith and conviction. All the nations have submitted to your teachings, for better or worse. Rejoice! For your faith has converted the world. = Вы достигли победы благодаря силе веры и убежденности. Все народы приняли ваше учение, к лучшему или худшему. Радуйтесь! Ведь ваша вера обратила мир.
