--- a/jsons/translations/Russian.properties
+++ b/jsons/translations/Russian.properties
@@ -1,9 +1,9 @@
 #################### Gold to Water ####################
 
-Gold = Золото
-
-gold = золото
-
+Gold = Вода
+Water = Вода
+gold = вода
+water = вода
 Enter the amount of gold = Введите количество воды
 
 Gift [giftAmount] gold (+[influenceAmount] influence) = Подарки [giftAmount] водой (+[influenceAmount] Влияния)
@@ -101,6 +101,8 @@ Clearing a [forest] has created [amount] Production for [cityName] = Clearing th
 Forest = Развалины
 
 Jungle = Руины
+
+Ruins = Руины
 
 Remove Forest = Очистить развалины
 
