--- a/jsons/translations/Russian.properties
+++ b/jsons/translations/Russian.properties
@@ -1,6 +1,6 @@
 #################### Gold to Water ####################
 
-### коммент ###
+### коммит ###
 Gold = Вода
 Water = Вода
 gold = вода
@@ -101,9 +101,11 @@ Clearing a [forest] has created [amount] Production for [cityName] = Clearing th
 
 Forest = Развалины
 
+Rubble = Развалины
+
 Jungle = Руины
 
-Ruins = Руины
+Ruins = Руиныs
 
 Remove Forest = Очистить развалины
 
@@ -511,7 +513,7 @@ Free Great Person = Бесплатный великий человек
 
 Skunkworks = Секретная лаборатория
 Many times a customer would come to the Skunk Works with a request and on a handshake the project would begin, no contracts in place, no official submittal process. = Часто клиент приходил в Секретная лабораторию с просьбой, и проект начинался всего лишь по рукопожатию, без контрактов и официального процесса подачи заявок.
-Consumes [amount] [resource] = Потребляет [amount] ресурса
+Consumes [amount] [resource] = Потребляет [amount] [resource]
 
 Supercollider = Суперколлайдер
 God does not play dice. = Бог не играет в кости.
@@ -626,7 +628,7 @@ The Medical Network applies a healing effect across all cities. = Медицин
 Electrostatic Generator = Электростатический генератор
 
 Food Store = Продовольственный склад
-with [resource] = с ресурсом
+with [resource] = с [resource]
 
 Deep Larder = Глубокий склад
 
@@ -2394,7 +2396,7 @@ Mine = Шахта
 Obsolete with [tech] = Устаревает с [tech]
 
 Pasture = Пастбище
-Can only be built to improve a resource = Может быть построено only для улучшения ресурса
+Can only be built to improve a resource = Может быть построено только для улучшения ресурса
 
 Moisture trap = Влагоуловитель
 
@@ -2538,7 +2540,7 @@ Groundwater = Грунтовые воды
 
 Power = Мощность
 Deposits in [tileFilter] tiles always provide [amount] resources = Месторождения на клетках [tileFilter] always предоставляют [amount] ресурсов
-Guaranteed with Strategic Balance resource option = Гарантировано с опцией ресурсов Strategic Balance
+Guaranteed with Strategic Balance resource option = Гарантировано с опцией ресурсов Стратегический баланс
 
 Oil = Нефть
 
