Update English translation file
Add new pillaging uniques to English translation

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -55,6 +55,8 @@ Provides a sum of gold each time you spend a Great Person = Provides a sum of wa
 
 Doubles Gold given to enemy if city is captured = Doubles Water given to enemy if city is captured
 
+[relativeAmount]% Gold given to enemy if city is captured = [relativeAmount]% Water given to enemy if city is captured
+
 [relativeAmount]% Gold cost of acquiring tiles [cityFilter] = [relativeAmount]% Water cost of acquiring tiles [cityFilter]
 
 [relativeAmount]% Gold cost of upgrading = [relativeAmount]% Water cost of upgrading
@@ -66,6 +68,8 @@ When conquering an encampment, earn [amount] Gold and recruit a Barbarian unit =
 When defeating a [mapUnitFilter] unit, earn [amount] Gold and recruit it = When defeating a [mapUnitFilter] unit, earn [amount] Water and recruit it
 
 Receive triple Gold from Barbarian encampments and pillaging Cities = Receive triple Water from Barbarian encampments and pillaging Cities
+
+Receive [relativeAmount]% Gold from Barbarian encampments and pillaging Cities = Receive [relativeAmount]% Water from Barbarian encampments and pillaging Cities
 
 Can undertake a trade mission with City-State, giving a large sum of gold and [amount] Influence = Can undertake a trade mission with City-State, giving a large sum of water and [amount] Influence
 
